<resources>
    <string name="app_name">Stolperpfade</string>
    <string name="title">Stolperpfade</string>
    <string name="next_stone_button">Nächster Stein</string>
    <string name="scan_button">Stein-Scanner</string>
    <string name="route_button">Pfadplaner</string>
    <string name="info_button">Stolpersteine</string>
    <string name="db_button">Geschichtliches (zur Zeit noch: Datenbank)</string>
    <string name="history_button">Geschichtliches</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="project_info_button_text">Projekt und Künstler</string>
    <string name="project_and_artist_button_text">Projekt und Künstler</string>
    <string name="overview_to_project_info_button">Mehr Informationen zum Projekt</string>
    <string name="overview_to_artist_info_button">Mehr Informationen zum Künstler</string>
    <string name="start_loc_title">Wo möchten sie den nächsten Stolperpfad beginnen?</string>
    <string name="category_title">Wollen sie die Route nach einem Thema ausrichten?</string>
    <string name="end_loc_title">Wo soll der nächste Stolperpfad enden?</string>
    <string name="title_activity_scrolling_info">ScrollingInfoActivity</string>
    <string name="title_activity_db">DbActivity</string>
    <string name="title_activity_scanner">Stein-Scanner</string>
    <string name="title_activity_route">Map</string>
    <string name="title_activity_route_planner">Pfadplaner</string>
    <string name="title_activity_filter_search">FilterSearchActivity</string>
    <string name="title_activity_show_list_item">ShowListItem</string>
    <string name="title_activity_next_stone">Nächster Stein</string>
    <string name="title_activity_history_info">Geschichtliches</string>
    <string name="title_activity_impressum">Impressum</string>
    <string name="title_activity_privacy">Datenschutz</string>
    <string name="title_activity_artist_info">Der Künstler</string>
    <string name="title_activity_project_info">Das Projekt</string>
    <string name="title_activity_project_and_artist_overview">Projekt und Künstler</string>
    <string name="title_biography_example">Biografie</string>
    <string name="username">Username</string>
    <string name="walk_time">Zeit in min</string>
    <string name="walk_time_title">Wie wie viel Zeit haben Sie für den Stolperpfad?</string>
    <string name="test_title">This is a Test Title</string>
    <string name="my_test_text">This is a Test.
        This also is only a placeholder activity that should never and not ever be
        viewed and handled as an activity that would be kept in the final product.
        Please remember to implement a specific activity for the place where this string
        appears. Have a nice day.</string>
    <string name="impressum_text">Hier steht nacher das ganze Impressum drin, bitte noch nachtragen und formatieren!</string>
    <string name="privacy_text">Hier steht nacher alles zum Thema Datenschutz drin, bitte noch nachtragen und formatieren!</string>
    <string name="info_text">
        "Nur ein Beispiel für einen Informationstext."
    </string>
    <string name="info_person">
        "\nLudwig Hecht\n
        Ludwig Hecht wurde am 14. Oktober 1866 in Bonnland geboren (der Ort musste 1937 von seinen Bewohnern aufgegeben werden,
        weil dort der Truppenübungsplatz Hammelburg eingerichtet wurde). Er war der 3. Sohn von Pauline Hecht geb.
        Obermaier und Moses Wolf Hecht. 1871 verzogen die Eltern nach Würzburg, wo sein Vater als Immobilienagent den Familienunterhalt verdiente.
        Ludwig Hecht wurde, wie sein 1891 verstorbener Bruder Arzt. Nach seinem Studium übernahm er zunächst die Praxis seines erkrankten Bruders.
        Er zog jedoch 1891 nach Ulm,um dort eine Stelle als Assistenzarzt anzutreten. Hier heiratete er am 7. Sept 1893 Rosa Thalmessinger.
        Das Paar hatte 3 Kinder: Paul, Otto und Anneliese."
        "Ludwig Hecht war offenbar sehr bald ein beliebter und gefragter Arzt. Er praktizierte ab 1893 als niedergelassener praktischer Arzt
        und Geburtshelfer im Hafenbad , später in der Sattlergasse und ab 1910 in der Olgastr. 4, zuletzt ab 1932/33 bis 1938 in der Olgastr. 31
        (heute Olgastr. 83-85). Er arbeitete seit 1906 auch als Armenarzt (Armenärzte waren von der Stadt beauftragte Ärzte, an die sich
        mittellose Ulmer wenden konnten). Rudolph C. Hecht (ein Enkel) beschreibt in seinen Erinnerungen, dass sein Großvater mit der
        Kutsche auch viele Hausbesuche auf dem Land machte und wenn notwendig nächtelang am Bett seiner Patienten blieb.
        Bei mittellosen Patienten habe er, statt einer Rechnung, bisweilen Geld auf dem Küchentisch zurückgelassen."
        "Am 19.4.1933 wurden per Verfügung des Staatskommissars für die Verwaltung der Stadt Ulm für die sozial Hilfebedürftigen
        die freie Arztwahl eingeführt. Das bedeutete jedoch gleichzeitig, dass die jüdischen Ärzte von der Versorgung dieses Personenkreises ausgeschlossen waren."
    </string>
    <string name="header_content_desc">Header of the app with a small logo and the title</string>
    <string name="text_artist_info">Hier stehen nacher genaue Informationen zum Künstler hinter dem Projekt Stolpersteine, auch eventuelle Bilder und Zitate können hier eingebaut werden</string>
    <string name="text_project_info">Hier steht später alles wichtige zum Projekt. Alle interessanten Hintergründe, Orte, etc und auch evtl noch Links und Bilder und Zitate könnten hier eingebuat werden</string>
    <string name="text_artist_overview">Hier stehen nacher genaue Informationen zum Künstler hinter dem Projekt Stolpersteine, auch eventuelle Bilder und Zitate können hier eingebaut werden</string>
    <string name="text_project_overview">Hier steht später alles wichtige zum Projekt. Alle interessanten Hintergründe, Orte, etc und auch evtl noch Links und Bilder und Zitate könnten hier eingebuat werden</string>
    <string name="def_content_description">This is a content description</string>
    <string name="lorem_ipsum">
    Lorem hallo ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet lobortis augue. Curabitur nec elementum quam. Fusce rhoncus lobortis mi, et dictum dolor interdum vitae. Sed congue, nunc sed lobortis laoreet, diam nunc aliquet nibh, nec cursus nisl neque vel diam. Cras a pharetra ipsum, vitae scelerisque tellus. Praesent id ullamcorper nunc. Aenean tristique est diam, id convallis urna sagittis sit amet. Phasellus auctor orci at nibh pretium tempus. Nulla dictum ante sed libero ultricies pellentesque. Vivamus at imperdiet magna.
    \n
    In pretium leo non diam eleifend sollicitudin. Mauris maximus, urna non ullamcorper molestie, turpis orci cursus augue, sed laoreet massa eros at eros. Fusce eu blandit metus. Donec porta magna eros, eu pharetra risus pellentesque in. Aliquam erat volutpat. Sed ac leo pulvinar, aliquet massa a, rhoncus augue. Nunc sapien arcu, auctor eget porta vitae, lobortis at risus. Integer et feugiat nibh, et varius lacus. Integer luctus laoreet nibh fermentum blandit. Suspendisse lobortis malesuada tristique. In scelerisque sodales ex, ut auctor ipsum sagittis vel.
    \n
    Suspendisse lacinia nulla vitae turpis molestie imperdiet. Phasellus consequat eros sit amet dignissim fermentum. Nulla non efficitur urna. Curabitur laoreet, mi in ultrices varius, felis nisi rhoncus augue, et blandit quam massa blandit neque. Morbi tincidunt ipsum nec est tincidunt, mattis tempus elit pulvinar. Curabitur ut elementum lectus. Etiam egestas tellus leo, ut malesuada felis vestibulum at. Vestibulum suscipit pellentesque sapien, nec pharetra elit varius eu. Suspendisse potenti. Etiam nec porta nisl. Etiam vel nunc augue. Vivamus sed lobortis urna. Maecenas tempor blandit nunc et scelerisque.
    \n
    Suspendisse hendrerit nibh sit amet sollicitudin vulputate. Cras malesuada feugiat augue, a auctor nulla pharetra ut. Cras bibendum laoreet commodo. Quisque sed dui suscipit velit consectetur consequat. Morbi sed convallis nisl. Donec eget urna tortor. Cras et dignissim sem.
    </string>
    <string name="app_name_big">STOLPERPFADE</string>
    <string name="todo">TODO</string>
    <string name="dark_mode_switch">Nacht Modus</string>
    <string name="quick_acces_scanner_button">Stein-Scanner</string>
    <string name="welcome_text_title">Willkommen!</string>
    <string name="welcome_text">
        Willkommen, hier ist ein Info-Text. Hier sind sie gerade auf der Startseite unserer App. Wir hoffen sie erweist sich als informativ und gut nutzbar</string>
    <string name="info_for_route_creation">Neue Route erstellen</string>
    <string name="info_for_route_save_load">Route speichern/laden</string>
    <string name="info_for_def_marker">Wichtiger Punkt auf der Karte</string>
    <string name="info_long_click_title">Hinweis:</string>
    <string name="info_long_click">Um eine Start- oder End-Markierung für Ihren Stolperpfad zu setzen drücken sie einfach lange auf der Karte auf die gewünschte Position. Sie können diese Markierung später jederzeit durch einen Klick auf die markierung wieder löschen.</string>
    <string name="info_route_planner_title">Informationen zur Karte</string>
    <string name="start_choice_gps">Aktuelle Position</string>
    <string name="start_choice_marker">Gewählte Markierung</string>
    <string name="start_choice_center">Am Münsterplatz</string>
    <string name="end_choice_stone">Letzter Stein der Route</string>
    <string name="end_choice_marker">Gewählte Markierung</string>
    <string name="end_choice_center">Am Münsterplatz</string>
    <string name="button_back">Zurück</string>
    <string name="title_stone_info_default">Nachname, Vorname</string>
    <string name="button_bio">Schicksal</string>
    <string name="button_stone_info_map">Stolperstein</string>
    <string name="sub_title_stone_info_default">geb. oder verw. Geburtsname</string>
</resources>