<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/fira_sans_condensed_semibold"
        android:text="@string/start_loc_title"
        android:textColor="?attr/colorAppTextPrimary"
        android:textSize="18sp" />


    <RadioGroup
        android:id="@+id/start_of_route_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="4dp">

        <RadioButton
            android:id="@+id/start_at_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:buttonTint="?attr/colorAppTextPrimary"
            android:fontFamily="@font/fira_sans"
            android:text="@string/start_choice_gps"
            android:textColor="?attr/colorAppTextPrimary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/start_at_marker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:buttonTint="?attr/colorAppTextPrimary"
            android:fontFamily="@font/fira_sans"
            android:text="@string/start_choice_marker"
            android:textColor="?attr/colorAppTextPrimary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/start_at_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="?attr/colorAppTextPrimary"
            android:fontFamily="@font/fira_sans"
            android:text="@string/start_choice_center"
            android:textColor="?attr/colorAppTextPrimary"
            android:textSize="18sp" />
    </RadioGroup>
</LinearLayout>